@@ -2,6 +2,7 @@
 
 	* Bugfix: Fixed lost statements in sqlite3 backend if an error or a timeout occured
 	* Bugfix: Fixed building dynamic firebird and mysql backend libraries on Windows platforms
+	* Bugfix: Fixed pgsql backend support for timeouts in odbx_result() on Windows platforms
 
 2009-08-07 Norbert Sendetzky <norbert@linuxnetworks.de>
 
